# krit

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  justfile  package.json  pnpm-lock.yaml
.changeset/: binary-scroll-fix.md  comment-status-tracker.md  desktop-app.md  empty-taxis-drive.md  fix-button-hover.md  suggestions-and-editor.md  untracked-file-icon.md
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/design/: krit-v2.md  live-review.md  reactive-loop-perf.md
krit/: Cargo.toml
krit/src/: edits.rs  git.rs  hub.rs  main.rs  pathsafe.rs  reanchor.rs  server.rs  settings.rs  state.rs  store.rs  subcommands.rs  types.rs  watcher.rs
skills/diffx/: SKILL.md
skills/diffx-finish-review/: SKILL.md
skills/diffx-review/: SKILL.md
skills/krit/: SKILL.md
src/: cli.ts  git.ts  path.ts  server.ts  settings.ts  state.ts  subcommands.ts  types.ts  watcher.ts
src/ui/: App.tsx  env.d.ts  main.tsx  utils.ts  workerFactory.ts
src/ui/components/: BinaryFileDiff.tsx  CodeViewWrapper.tsx  CommentBubble.tsx  CommentForm.tsx  CommentTracker.tsx  DiffViewer.tsx  FileDiffCard.tsx  FileEditorModal.tsx  FileTree.tsx  SelectionPill.tsx  Toolbar.tsx  UndoToast.tsx  pierreHighlightStyle.ts
src/ui/hooks/: useComments.ts  useDiff.ts  useFileContents.ts  useLanguageExtension.ts  useReviewState.ts  useSettings.ts  useViewed.ts  useVirtualRows.ts
src/ui/styles/: global.css
src/ui/utils/: selectionMapping.ts
