[package]
name = "krit"
version = "2.0.0-alpha.0"
edition = "2024"
description = "Local code review between you and your agent: diffs, margin comments, live events."
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "sync", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
notify-debouncer-full = "0.5"
rust-embed = "8"
async-stream = "0.3"
futures-core = "0.3"
uuid = { version = "1", features = ["v4"] }
open = "5"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true
strip = true
