[package]
name = "krit-desktop"
version = "0.1.0"
description = "Desktop shell for krit — one window per review"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
